<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/notification_layout"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="8dp"
    android:background="@color/colorNotificationBackground">

    <ImageView
        android:id="@+id/notification_weather_icon_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:src="@drawable/w201"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/notification_city_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="20sp"
            tools:text="@string/county_name_text"/>

        <TextView
            android:id="@+id/notification_now_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/notification_weather_now_text"/>

    </LinearLayout>

    <TextView
        android:id="@+id/notification_refresh_time_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="right"
        android:textSize="16sp"
        android:text="@string/notification_refresh_time_text"/>

</LinearLayout>