<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:id="@+id/capital_county_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="10dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/currentBigTextColor"
        android:text="深"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center|left"
        android:padding="8dp">

        <TextView
            android:id="@+id/county_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:text="@string/county_name_text"/>

        <TextView
            android:id="@+id/county_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/county_weather_state_text"/>

    </LinearLayout>

    <TextView
        android:id="@+id/county_degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="10dp"
        android:textSize="26sp"
        android:text="@string/county_degree_text"/>

</LinearLayout>